--- a/app/src/main/res/layout/activity_menuinfo.xml
+++ b/app/src/main/res/layout/activity_menuinfo.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- 작성자 이름 : 김은철
-**** 작성일자 : 2020_10_02
-**** 최종 업데이트 : 2020_10_02
-**** 내용 : -
--->
 
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -115,6 +110,36 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"  />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="right"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="합계 : "
+                android:textSize="24sp"
+                android:textColor="#000000"/>
+            <TextView
+                android:id="@+id/menuinfo_sumprice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0 "
+                android:textSize="24sp"
+                android:textColor="#000000"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="원"
+                android:textSize="24sp"
+                android:textColor="#000000"
+                android:layout_marginRight="20dp"
+                />
+
+        </LinearLayout>
         <Button
             android:id="@+id/btn_orderButton"
             android:layout_width="match_parent"
