--- a/app/src/main/res/layout/menu_info_list_item.xml
+++ b/app/src/main/res/layout/menu_info_list_item.xml
@@ -25,7 +25,8 @@
             android:layout_marginLeft="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <TextView
             android:id="@+id/menu_info_list_item_name"
