--- a/app/src/main/res/layout/activity_home_bottom_navigation_post.xml
+++ b/app/src/main/res/layout/activity_home_bottom_navigation_post.xml
@@ -7,6 +7,7 @@
     tools:context=".home_bottomNavigation_post">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:padding="30dp"
         android:id="@+id/post_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
