--- a/app/src/main/res/layout/activity_home_bottom_navigation_choicestore.xml
+++ b/app/src/main/res/layout/activity_home_bottom_navigation_choicestore.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home_bottomNavigation_choicestore">
+    tools:context=".home_bottomNavigation_choicestore"
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
