--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +13,11 @@
             android:layout_width="205dp"
             android:layout_height="64dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/login_logo" />
+            android:src="@drawable/login_logo"
+            android:textSize="30sp"
+            android:textColor="#000000"
+            android:background="#ADFFFFFF"
+            />
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/login_edittext_id"
