--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -218,51 +218,58 @@
 
                         <Button
                             android:id="@+id/reservation_btn_41"
-                            android:layout_weight="1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_margin="15dp"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
                             android:layout_gravity="center_horizontal"
+                            android:background="@drawable/tableres"
                             android:text="테이블 (4인)"
                             android:textColor="#000000"
                             android:textStyle="bold">
                         </Button>
-
                         <Button
                             android:id="@+id/reservation_btn_42"
-                            android:layout_weight="1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@drawable/tableres"
+                            android:layout_marginLeft="50dp"
                             android:text="테이블 (4인)"
                             android:textColor="#000000"
                             android:textStyle="bold">
                         </Button>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <Button
                             android:id="@+id/reservation_btn_43"
-                            android:layout_weight="1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_margin="15dp"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@drawable/tableres"
+                            android:text="테이블 (4인)"
+                            android:textColor="#000000"
+                            android:textStyle="bold">
+                        </Button>
+                        <Button
+                            android:id="@+id/reservation_btn_44"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@drawable/tableres"
+                            android:layout_marginLeft="50dp"
                             android:text="테이블 (4인)"
                             android:textColor="#000000"
                             android:textStyle="bold">
                         </Button>
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/reservation_btn_61"
-                            android:layout_weight="1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text = "테이블 (6인)"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -270,204 +277,25 @@
                         android:orientation="horizontal">
 
                         <Button
-                            android:id="@+id/reservation_btn_62"
-                            android:layout_weight="1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text = "테이블 (6인)"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_margin="15dp"
+                            android:layout_width="130dp"
                             android:id="@+id/reservation_btn_couple1"
-                            android:layout_weight="1"
-                            android:text = "커플석 (2인)"
+                            android:layout_height="130dp"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@drawable/tableres"
+                            android:text="테이블 (2인)"
                             android:textColor="#000000"
                             android:textStyle="bold">
                         </Button>
 
                         <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
                             android:id="@+id/reservation_btn_couple2"
-                            android:layout_weight="1"
-                            android:text = "커플석 (2인)"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_couple3"
-                            android:layout_weight="1"
-                            android:text = "커플석 (2인)"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_couple4"
-                            android:layout_weight="1"
-                            android:text = "커플석 (2인)"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_family1"
-                            android:layout_weight="1"
-                            android:text = "가족 전용석 (4인)"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_famliy2"
-                            android:layout_weight="1"
-                            android:text = "가족 전용석 (4인)"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_person1"
-                            android:layout_weight="1"
-                            android:text = "1인 테이블"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_person2"
-                            android:layout_weight="1"
-                            android:text = "1인 테이블"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_person3"
-                            android:layout_weight="1"
-                            android:text = "1인 테이블"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_person4"
-                            android:layout_weight="1"
-                            android:text = "1인 테이블"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_person5"
-                            android:layout_weight="1"
-                            android:text = "1인 테이블"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_person6"
-                            android:layout_weight="1"
-                            android:text = "1인 테이블"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_person7"
-                            android:layout_weight="1"
-                            android:text = "1인 테이블"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_person8"
-                            android:layout_weight="1"
-                            android:text = "1인 테이블"
-                            android:textColor="#000000"
-                            android:textStyle="bold">
-                        </Button>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/reservation_btn_person9"
-                            android:layout_weight="1"
-                            android:text = "1인 테이블"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
+                            android:layout_gravity="center_horizontal"
+                            android:background="@drawable/tableres"
+                            android:layout_marginLeft="50dp"
+                            android:text="테이블 (2인)"
                             android:textColor="#000000"
                             android:textStyle="bold">
                         </Button>
