--- a/app/src/main/res/layout/activity_storeinfo_korea.xml
+++ b/app/src/main/res/layout/activity_storeinfo_korea.xml
@@ -26,14 +26,6 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/back"/>
 
-            <ImageButton
-                android:id="@+id/storeinfo_korea_btn_mirror"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="320dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/mirror" />
 
         </LinearLayout>
 
@@ -67,6 +59,12 @@
             android:textStyle="bold"
             />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            >
         <Button
             android:id="@+id/storeinfo_korea_btn_choice"
             android:layout_width="wrap_content"
@@ -75,6 +73,17 @@
             android:text="찜 하기"
             android:background="#ffffff"
             android:textColor="#ff0000"/>
+            <Button
+                android:layout_marginLeft="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/storeinfo_korea_btn_mirror"
+                android:text="결제하기"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:background="#ffffff"
+                />
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
