--- a/app/src/main/res/layout/storelist_item_china.xml
+++ b/app/src/main/res/layout/storelist_item_china.xml
@@ -2,6 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/stroke"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
     >
 
     <LinearLayout
@@ -9,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp"
+
+        android:layout_marginBottom="20dp"
         >
 
         <LinearLayout
