--- a/app/src/main/res/layout/storelist_item_west.xml
+++ b/app/src/main/res/layout/storelist_item_west.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/stroke"
     >
 
     <LinearLayout
@@ -9,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         >
 
         <LinearLayout
